# rtmp_tx

./: README.md  pubspec.yaml
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/rtmp_tx/: MainActivity.kt
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/rtmp/rtmp_stream_lib/: Cargo.toml
native/rtmp/rtmp_stream_lib/src/: camera.rs  encoder.rs  main.rs  rtmp_client.rs
native/rtmp/rtmp_stream_lib/src/rtmp_client/: connection.rs  mod.rs  rtmp_clients.rs
native/rtmp/rtmp_stream_lib/src/util/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
