[package]
name = "rtmp_stream_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.11"
lazy_static = "1.4.0"
log = "0.4.20"
openh264 = "0.5.0"
rml_amf0 = "0.3.0"
rml_rtmp = "0.8.0"
rscam = "0.5.5"
