[package]
name = "rtmp_stream_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
crossbeam-channel = "0.5.11"
lazy_static = "1.4.0"
log = "0.4.20"
mio = "0.6.23"
openh264 = "0.5.0"
rand = "0.8.5"
reqwest = "0.11.23"
rml_amf0 = "0.3.0"
rml_rtmp = "0.8.0"
rscam = "0.5.5"
slab = "0.4.9"
url = "2.5.0"
